--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="description" 
+      content="Free Exercise Logger created by Steven Bertolucci for an educational project. All is welcome to use it."
+    />
+    <meta 
+      name="keywords" 
+      content="Exercise, Logger, Exercise Logger"
+    />
+    <meta
+      name="author" 
+      content="Steven Bertolucci"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
